Implemented Basic RMI classes and Stocks Notify and Subscribe working

--- a/BOVESPA_Server/nbproject/project.properties
+++ b/BOVESPA_Server/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=bovespa_server.ServerMainUI
+main.class=bovespa.ServerMainUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
