--- a/BOVESPA_Client/nbproject/project.properties
+++ b/BOVESPA_Client/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=bovespa_client.ClientMainUI
+main.class=bovespa.ClientMainUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
